[package]
name = "jami-rs"
version = "0.1.0"
authors = ["Sébastien Blin <sebastien.blin@savoirfairelinux.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_dirs = "1.2.1"
dbus-tokio = "0.6.0"
dbus = { version = "0.9", features=["futures"] }
dirs = "3.0.1"
log = "0.4.11"
rusqlite = "0.24.2"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["full"] }
