[package]
name = "jami-rs"
version = "0.2.0"
description = "Jami library in Rust"
authors = ["Sébastien Blin <contact@enconn.fr>"]
edition = "2018"
keywords = ["jami", "tui"]
repository = "https://github.com/AmarOk1412/jami-rs"
license = "BSD-3-Clause"
categories = ["communication"]

[dependencies]
app_dirs = "1.2.1"
dbus-tokio = "0.6.0"
dbus = { version = "0.9", features=["futures"] }
dirs = "3.0.1"
log = "0.4.11"
rusqlite = "0.24.2"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["full"] }
